--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
 
-  <body style="color: rgb(0, 0, 0); background-color:#D5DBDC;" link="#0000ee" vlink="#551a8b">
+  <body style="color: rgb(0, 0, 0); background-color:#D5DBDC;" link="#8585ad" vlink="#4d0099">
 
     <br>
     <font size="+3">
@@ -21,8 +21,8 @@
     <br>
 
     <font style="font-weight: bold;" size="+1">
-      Lecturer and Researcher</font> 
-    <br> EPF-Ecoles d'Ingénieurs, Troyes.
+      Lecturer and Researcher</font>  
+    <br> EPF-Ecoles d'Ingénieurs, Troyes. 
     <br>
     <br><a href="http://www.epf.fr" style="text-decoration: none;"><img src="img/logo_epf.png" HEIGHT=80></a>
     <br>
@@ -34,238 +34,245 @@
     <br> 2, rue F. Sastre
     <br> 10430 Rosières-près-Troyes
 
+
     <br>
     <br><b>CV  </b> 
     <br>
     french <a href="file/cv.pdf">[pdf]</a> 
 
-    <!--
+    <p><br>
+    Associate member of the following research team and projects 
+    <ul style="list-style-type:circle">
+      <li>
+        INRIA <a href="http://team.inria.fr/mctao/" style="text-decoration: none;">McTAO</a> Team
+      </li>
+      <li>
+        Projet <a href="https://www.fondation-hadamard.fr/PGMO">PGMO FMJH</a>: Algebro-geometric techniques with applications to
+        global optimal control for Magnetic Resonance Imaging
+      </li>
+    </ul>
     <br>
-    <br><b>Teaching</b> 
-    <br>
-    <a href="Teaching/index.html">ENSEEIHT</a> 
-    -->
 
     <p align="justify"><b>Research</b>
     <br><i>Interests:</i> 
     Geometric control theory, Optimization and optimal control, Numerical methods, Fracture mechanics. 
     <br><i>Applications:</i>
-     Swimming at low Reynolds number, Nuclear magnetic resonance, 
-     Orbital transfer with low thrust, Inverse optimal control in Robotics.
-<!--    <br>Member of the <a href="https://www.laas.fr/public/en/mac" style="text-decoration: none;">MAC</a> team
-<br> Involved in the <a href="http://taming.laas.fr/" style="text-decoration: none;">ERC-ADG project TAMING</a> -->
+    Swimming at low Reynolds number, Nuclear magnetic resonance, 
+    Orbital transfer with low thrust, Inverse optimal control in Robotics.
+    <!--    <br>Member of the <a href="https://www.laas.fr/public/en/mac" style="text-decoration: none;">MAC</a> team
+      <br> Involved in the <a href="http://taming.laas.fr/" style="text-decoration: none;">ERC-ADG project TAMING</a> -->
 
+      <br>
+      <br><b>Work in progres</b>
+      <ul>
+
+        <li>
+          <i>
+            Working notes on the time minimal saturation of a pair of spins and application in Magnetic Resonance Imaging.
+          </i>
+          <br>
+          (with B. Bonnard, O. Cots, T. Verron)
+          <a href="file/mri2018.pdf">[pdf]</a>
+        </li>
+
+        <li>
+          <i>
+            Metric approximation of minimum time control systems.
+          </i>
+          <br>
+          (with J.-B. Caillau, J.-B. Pomet)
+          <a href="file/finsler2018.pdf">[pdf]</a>
+        </li>
+
+        <li>
+          <i>
+            Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging (2017). 
+          </i>
+          <br>
+          (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
+          <a href="file/mri2017.pdf">[pdf]</a>
+        </li>
+      </ul>
+
+      <br><b>Submitted monograph</b>
+      <ul>
+        <li>
+          <i>
+            Geometric and Numerical Optimal
+            Control with Application to
+            Swimming at Low Reynolds
+            Number and Medical Resonance
+            Imaging. Springerbriefs  (2016). (118 pages)
+          </i>
+          <br>
+          (with B. Bonnard, M. Chyba)
+          <a href="file/monograph16.pdf">[pdf]</a>
+        </li>
+      </ul>
+
+      <br><b>Submitted papers</b>
+      <ul>
+
+        <li>
+          <i>
+            Sub-Riemannian geometry, Hamiltonian
+            dynamics, micro-swimmers, Copepod nauplii and
+            Copepod robot (2018). (40 pages)
+          </i>
+          <br>
+          (with B. Bonnard, M. Chyba, D. Takagi)
+          <a href="file/survey-nageurs17.pdf">[pdf]</a>
+        </li>
+
+
+
+      </ul>
+
+      <br><b>Papers in journals with peer review</b>
+      <ul>
+
+        <li>
+          <i>
+            P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
+            Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case, To Appear in ESAIM: COCV, 2018 (29p.).
+          </i>
+          <a href="file/copepod-cocv.pdf">[pdf]</a>
+        </li>
+
+
+        <li>
+          <i>
+            P. Bettiol, B. Bonnard and J. Rouot,
+            Optimal strokes at low Reynolds number: a geometric and
+            numerical study of Copepod and Purcell swimmers, To Appear in SIAM J. Control Optim., 2018 (24p.). 
+          </i>
+          <a href="file/siam16.pdf">[pdf]</a>
+        </li>
+
+
+        <li>
+          <i>
+            P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon and J. Rouot,
+            The Three-link Purcell swimmer: some geometric problems related to periodic optimal controls. 
+          </i>
+          <br>
+          Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016 (27p.).
+          <a href="file/ricam15.pdf">[pdf]</a>
+        </li>
+      </ul>
+
+      <br><b>Papers in books with peer review</b>
+      <ul>
+        <li>
+          <i>
+            P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon and J. Rouot,
+            The Three-link Purcell swimmer: some geometric problems related to periodic optimal controls. 
+          </i>
+          <br>
+          Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016.
+          <a href="file/ricam15.pdf">[pdf]</a>
+        </li>
+
+        <li> 
+          <i>
+            B. Bonnard, H. Henninger and J. Rouot,
+            Lunar perturbation of the metric 
+            associated to the averaged orbital transfer. 
+          </i>
+          <br>
+          Analysis and geometry in control theory and its applications, 
+          published in Springer InDam series, vol. 11, 2015. 
+          <a href="file/zermelo14.pdf">[pdf]</a>
+        </li>
+      </ul>
+
+      <br><b>Proceedings with peer review</b>
+      <ul>
+        <li>
+          <i>
+            J.Rouot and J.-B. Lasserre, 
+            On inverse optimal control via polynomial optimization. 
+          </i>
+          <br>
+          56th IEEE Conference on
+          Decision and Control, 2017.
+          <a href="file/cdc2017.pdf">[pdf]</a> 
+        </li>
+
+        <li>
+          <i>
+            P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
+            Optimal control theory and the efficiency of the swimming mechanism of the Copepod Zooplankton. 
+          </i>
+          <br>
+          In Proceedings of the 20th IFAC World Congress, Toulouse, 2017.
+          <a href="file/ifac16.pdf">[pdf]</a>
+        </li>
+
+        <li>
+          <i>
+            B. Bonnard, M. Chyba, J. Rouot and D. Takagi,
+            A Numerical Approach to the Optimal Control
+            and Efficiency of the Copepod Swimmer. 
+          </i>
+          <br>
+          55th IEEE Conference on
+          Decision and Control, 2016.
+          <a href="file/cdc-copepod16.pdf">[pdf]</a>
+        </li>
+        <li>
+          <i>
+            B. Bonnard, A. Jacquemard and J. Rouot,
+            Optimal Control of an Ensemble of Bloch Equations
+            with Applications in MRI. 
+          </i>
+          <br>
+          55th IEEE Conference on Decision and Control, 2016.
+          <a href="file/cdc-mri16.pdf">[pdf]</a>
+        </li>
+      </ul>
+
+      <br><b>Miscellaneous</b>
+      <ul>
+
+        <li>
+          <i>
+            Sub-Riemannian geometry, 
+            Hamiltonian dynamics,
+            micro-swimmers, Copepod nauplii and Copepod robot 
+          </i>
+          <br>
+          Slides on the Copepod swimmer. 
+          <a href="file/planches-copepod.pdf">[pdf]</a>
+          </br>
+        </li>
+
+        <li>
+          <i>
+            Geometric and numerical methods in optimal control and applications to the swimming problem at low Reynolds number and to low thrust orbital transfer.
+          </i>  
+          <br>
+          PhD Thesis, 2016,
+          <i>Advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf">[pdf]</a> <a href="https://tel.archives-ouvertes.fr/tel-01472370v2">[link]</a> 
+        </li>
+
+
+        <li>
+          <i>
+            Optimal Transportation : Applications to Image processing.
+          </i>
+          <br>
+          Memoir, 2012,
+          <i>Advisors:</i> Emmanuel Maitre and &Eacutedouard Oudet. <a href="file/rapport2A.pdf">[pdf]</a> 
+        </li>
+      </ul>
+
+      <p align="justify"><b>Education</b>
+      <br>PhD in Applied Mathematics (<a href="http://unice.fr/" style="text_decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016)
+      <br>Ing&eacutenieur in Applied Mathematics / Computer Science
+      (<a href="http://ensimag.grenoble-inp.fr/welcome/" style="text-decoration: 
+      none;">Grenoble INP - ENSIMAG</a>, 2013)
     <br>
-    <br><b>Work in progres</b>
-    <ul>
-
-      <li>
-        <i>
-          Working notes on the time minimal saturation of a pair of spins and application in Magnetic Resonance Imaging.
-        </i>
-        <br>
-        (with B. Bonnard, O. Cots, T. Verron)
-        <a href="file/mri2018.pdf">[pdf]</a>
-      </li>
-
-      <li>
-        <i>
-          Metric approximation of minimum time control systems.
-        </i>
-        <br>
-        (with J.-B. Caillau, J.-B. Pomet)
-        <a href="file/finsler2018.pdf">[pdf]</a>
-      </li>
-
-      <li>
-        <i>
-          Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging (2017). 
-        </i>
-        <br>
-        (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
-        <a href="file/mri2017.pdf">[pdf]</a>
-      </li>
-    </ul>
-
-    <br><b>Submitted monograph</b>
-    <ul>
-      <li>
-        <i>
-          Geometric and Numerical Optimal
-          Control with Application to
-          Swimming at Low Reynolds
-          Number and Medical Resonance
-          Imaging. Springerbriefs  (2016). (118 pages)
-        </i>
-        <br>
-        (with B. Bonnard, M. Chyba)
-        <a href="file/monograph16.pdf">[pdf]</a>
-      </li>
-    </ul>
-
-    <br><b>Submitted papers</b>
-    <ul>
-
-      <li>
-        <i>
-          Sub-Riemannian geometry, Hamiltonian
-          dynamics, micro-swimmers, Copepod nauplii and
-          Copepod robot (2018). (40 pages)
-        </i>
-       <br>
-       (with B. Bonnard, M. Chyba, D. Takagi)
-        <a href="file/survey-nageurs17.pdf">[pdf]</a>
-      </li>
-
-
-
-    </ul>
-
-    <br><b>Papers in journals with peer review</b>
-    <ul>
-
-      <li>
-        <i>
-        P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
-       Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case, To Appear in ESAIM: COCV, 2018 (29p.).
-        </i>
-        <a href="file/copepod-cocv.pdf">[pdf]</a>
-      </li>
-
-
-      <li>
-        <i>
-          P. Bettiol, B. Bonnard and J. Rouot,
-        Optimal strokes at low Reynolds number: a geometric and
-        numerical study of Copepod and Purcell swimmers, To Appear in SIAM J. Control Optim., 2018 (24p.). 
-        </i>
-        <a href="file/siam16.pdf">[pdf]</a>
-      </li>
-
-
-      <li>
-        <i>
-         P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon and J. Rouot,
-       The Three-link Purcell swimmer: some geometric problems related to periodic optimal controls. 
-        </i>
-       <br>
-       Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016 (27p.).
-        <a href="file/ricam15.pdf">[pdf]</a>
-      </li>
-    </ul>
-
-    <br><b>Papers in books with peer review</b>
-    <ul>
-      <li>
-        <i>
-         P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon and J. Rouot,
-       The Three-link Purcell swimmer: some geometric problems related to periodic optimal controls. 
-        </i>
-       <br>
-       Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016.
-        <a href="file/ricam15.pdf">[pdf]</a>
-      </li>
-
-      <li> 
-        <i>
-        B. Bonnard, H. Henninger and J. Rouot,
-        Lunar perturbation of the metric 
-        associated to the averaged orbital transfer. 
-        </i>
-        <br>
-        Analysis and geometry in control theory and its applications, 
-        published in Springer InDam series, vol. 11, 2015. 
-        <a href="file/zermelo14.pdf">[pdf]</a>
-      </li>
-    </ul>
-
-    <br><b>Proceedings with peer review</b>
-    <ul>
-      <li>
-        <i>
-        J.Rouot and J.-B. Lasserre, 
-        On inverse optimal control via polynomial optimization. 
-        </i>
-        <br>
-        56th IEEE Conference on
-        Decision and Control, 2017.
-        <a href="file/cdc2017.pdf">[pdf]</a> 
-      </li>
-
-      <li>
-        <i>
-        P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
-       Optimal control theory and the efficiency of the swimming mechanism of the Copepod Zooplankton. 
-        </i>
-        <br>
-        In Proceedings of the 20th IFAC World Congress, Toulouse, 2017.
-        <a href="file/ifac16.pdf">[pdf]</a>
-      </li>
-
-      <li>
-        <i>
-        B. Bonnard, M. Chyba, J. Rouot and D. Takagi,
-        A Numerical Approach to the Optimal Control
-        and Efficiency of the Copepod Swimmer. 
-        </i>
-        <br>
-        55th IEEE Conference on
-        Decision and Control, 2016.
-        <a href="file/cdc-copepod16.pdf">[pdf]</a>
-      </li>
-      <li>
-        <i>
-      B. Bonnard, A. Jacquemard and J. Rouot,
-        Optimal Control of an Ensemble of Bloch Equations
-        with Applications in MRI. 
-        </i>
-        <br>
-        55th IEEE Conference on Decision and Control, 2016.
-        <a href="file/cdc-mri16.pdf">[pdf]</a>
-      </li>
-    </ul>
-
-    <br><b>Miscellaneous</b>
-    <ul>
-
-      <li>
-        <i>
-          Sub-Riemannian geometry, 
-          Hamiltonian dynamics,
-          micro-swimmers, Copepod nauplii and Copepod robot 
-        </i>
-        <br>
-        Slides on the Copepod swimmer. 
-      <a href="file/planches-copepod.pdf">[pdf]</a>
-        </br>
-      </li>
-
-      <li>
-        <i>
-        Geometric and numerical methods in optimal control and applications to the swimming problem at low Reynolds number and to low thrust orbital transfer.
-        </i>  
-        <br>
-        PhD Thesis, 2016,
-        <i>Advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf">[pdf]</a> <a href="https://tel.archives-ouvertes.fr/tel-01472370v2">[link]</a> 
-      </li>
-
-
-      <li>
-        <i>
-          Optimal Transportation : Applications to Image processing.
-        </i>
-        <br>
-        Memoir, 2012,
-        <i>Advisors:</i> Emmanuel Maitre and &Eacutedouard Oudet. <a href="file/rapport2A.pdf">[pdf]</a> 
-      </li>
-    </ul>
-
-    <p align="justify"><b>Education</b>
-    <br>PhD in Applied Mathematics (<a href="http://unice.fr/" style="text_decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016)
-    <br>Ing&eacutenieur in Applied Mathematics / Computer Science
-    (<a href="http://ensimag.grenoble-inp.fr/welcome/" style="text-decoration: 
-    none;">Grenoble INP - ENSIMAG</a>, 2013)
-  <br>
 
   </body>
 </html>
