--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <br>
 
     <p align="justify"><b>Address</b>
-    <br>e-mail: <a href="mailto:jeremy.rouot@epf.fr">jeremy.rouot@epf.fr</a>
+    <br>e-mail: <a href="mailto:jeremy.rouot@epf.fr" style="text-decoration: none;">jeremy.rouot@epf.fr</a>
     <br> EPF CAMPUS DE TROYES
     <br> 2, rue F. Sastre
     <br> 10430 Rosières-près-Troyes
@@ -38,7 +38,7 @@
     <br>
     <br><b>CV  </b> 
     <br>
-    french <a href="file/cv.pdf">[pdf]</a> 
+    french <a href="file/cv.pdf" style="text-decoration: none;">[pdf]</a> 
 
     <p><br>
     Associate member of the following research team and projects 
@@ -47,11 +47,11 @@
         INRIA <a href="http://team.inria.fr/mctao/" style="text-decoration: none;">McTAO</a> Team
       </li>
       <li>
-        Projet <a href="https://www.fondation-hadamard.fr/PGMO">PGMO FMJH</a>: Algebro-geometric techniques with applications to
+        Projet <a href="https://www.fondation-hadamard.fr/PGMO" style="text-decoration: none;">PGMO FMJH</a>: Algebro-geometric techniques with applications to
         global optimal control for Magnetic Resonance Imaging
       </li>
     </ul>
-    <br>
+    <p><br>
 
     <p align="justify"><b>Research</b>
     <br><i>Interests:</i> 
@@ -59,8 +59,6 @@
     <br><i>Applications:</i>
     Swimming at low Reynolds number, Nuclear magnetic resonance, 
     Orbital transfer with low thrust, Inverse optimal control in Robotics.
-    <!--    <br>Member of the <a href="https://www.laas.fr/public/en/mac" style="text-decoration: none;">MAC</a> team
-      <br> Involved in the <a href="http://taming.laas.fr/" style="text-decoration: none;">ERC-ADG project TAMING</a> -->
 
       <br>
       <br><b>Work in progres</b>
@@ -72,7 +70,7 @@
           </i>
           <br>
           (with B. Bonnard, O. Cots, T. Verron)
-          <a href="file/mri2018.pdf">[pdf]</a>
+          <a href="file/mri2018.pdf" style="text-decoration: none;">[pdf]</a>
         </li>
 
         <li>
@@ -81,7 +79,7 @@
           </i>
           <br>
           (with J.-B. Caillau, J.-B. Pomet)
-          <a href="file/finsler2018.pdf">[pdf]</a>
+          <a href="file/finsler2018.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
 
         <li>
@@ -90,7 +88,7 @@
           </i>
           <br>
           (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
-          <a href="file/mri2017.pdf">[pdf]</a>
+          <a href="file/mri2017.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
       </ul>
 
@@ -106,7 +104,7 @@
           </i>
           <br>
           (with B. Bonnard, M. Chyba)
-          <a href="file/monograph16.pdf">[pdf]</a>
+          <a href="file/monograph16.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
       </ul>
 
@@ -121,7 +119,7 @@
           </i>
           <br>
           (with B. Bonnard, M. Chyba, D. Takagi)
-          <a href="file/survey-nageurs17.pdf">[pdf]</a>
+          <a href="file/survey-nageurs17.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
 
 
@@ -136,7 +134,7 @@
             P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
             Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case, To Appear in ESAIM: COCV, 2018 (29p.).
           </i>
-          <a href="file/copepod-cocv.pdf">[pdf]</a>
+          <a href="file/copepod-cocv.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
 
 
@@ -146,7 +144,7 @@
             Optimal strokes at low Reynolds number: a geometric and
             numerical study of Copepod and Purcell swimmers, To Appear in SIAM J. Control Optim., 2018 (24p.). 
           </i>
-          <a href="file/siam16.pdf">[pdf]</a>
+          <a href="file/siam16.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
 
 
@@ -157,7 +155,7 @@
           </i>
           <br>
           Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016 (27p.).
-          <a href="file/ricam15.pdf">[pdf]</a>
+          <a href="file/ricam15.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
       </ul>
 
@@ -170,7 +168,7 @@
           </i>
           <br>
           Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016.
-          <a href="file/ricam15.pdf">[pdf]</a>
+          <a href="file/ricam15.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
 
         <li> 
@@ -182,7 +180,7 @@
           <br>
           Analysis and geometry in control theory and its applications, 
           published in Springer InDam series, vol. 11, 2015. 
-          <a href="file/zermelo14.pdf">[pdf]</a>
+          <a href="file/zermelo14.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
       </ul>
 
@@ -194,9 +192,9 @@
             On inverse optimal control via polynomial optimization. 
           </i>
           <br>
-          56th IEEE Conference on
-          Decision and Control, 2017.
-          <a href="file/cdc2017.pdf">[pdf]</a> 
+          2017 IEEE 56th Annual Conference on Decision and Control (CDC), 
+          2017, 721-726.
+          <a href="file/cdc2017.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
 
         <li>
@@ -206,7 +204,7 @@
           </i>
           <br>
           In Proceedings of the 20th IFAC World Congress, Toulouse, 2017.
-          <a href="file/ifac16.pdf">[pdf]</a>
+          <a href="file/ifac16.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
 
         <li>
@@ -218,7 +216,7 @@
           <br>
           55th IEEE Conference on
           Decision and Control, 2016.
-          <a href="file/cdc-copepod16.pdf">[pdf]</a>
+          <a href="file/cdc-copepod16.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
         <li>
           <i>
@@ -228,7 +226,7 @@
           </i>
           <br>
           55th IEEE Conference on Decision and Control, 2016.
-          <a href="file/cdc-mri16.pdf">[pdf]</a>
+          <a href="file/cdc-mri16.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
       </ul>
 
@@ -243,7 +241,7 @@
           </i>
           <br>
           Slides on the Copepod swimmer. 
-          <a href="file/planches-copepod.pdf">[pdf]</a>
+          <a href="file/planches-copepod.pdf"style="text-decoration: none;">[pdf]</a>
           </br>
         </li>
 
@@ -253,7 +251,7 @@
           </i>  
           <br>
           PhD Thesis, 2016,
-          <i>Advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf">[pdf]</a> <a href="https://tel.archives-ouvertes.fr/tel-01472370v2">[link]</a> 
+          <i>Advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf"style="text-decoration: none;">[pdf]</a> <a href="https://tel.archives-ouvertes.fr/tel-01472370v2"style="text-decoration: none;">[link]</a> 
         </li>
 
 
@@ -263,15 +261,14 @@
           </i>
           <br>
           Memoir, 2012,
-          <i>Advisors:</i> Emmanuel Maitre and &Eacutedouard Oudet. <a href="file/rapport2A.pdf">[pdf]</a> 
+          <i>Advisors:</i> Emmanuel Maitre and &Eacutedouard Oudet. <a href="file/rapport2A.pdf"style="text-decoration: none;">[pdf]</a> 
         </li>
       </ul>
 
       <p align="justify"><b>Education</b>
-      <br>PhD in Applied Mathematics (<a href="http://unice.fr/" style="text_decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016)
+      <br>PhD in Applied Mathematics (<a href="http://unice.fr/" style="text-decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016)
       <br>Ing&eacutenieur in Applied Mathematics / Computer Science
-      (<a href="http://ensimag.grenoble-inp.fr/welcome/" style="text-decoration: 
-      none;">Grenoble INP - ENSIMAG</a>, 2013)
+      (<a href="http://ensimag.grenoble-inp.fr/welcome/" style="text-decoration: none;">Grenoble INP - ENSIMAG</a>, 2013)
     <br>
 
   </body>
