--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114997045-1"></script>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+        gtag('config', 'UA-114997045-1');
+    </script>
     <meta name="author" content="J&eacuter&eacutemy Rouot">
     <meta name="description" content="Homepage of Jeremy Rouot" />
     <meta name="Keywords" content="Jeremy Rouot homepage">
