--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="description" content="Homepage of Jeremy Rouot" />
     <meta name="Keywords" content="Jeremy Rouot homepage">
     <meta http-equiv="Pragma" content="no-cache">
+    <meta name="google-site-verification" content="gNSE4DKNkeQ1woWLtRcwORzo9NgAEjgFPnYRQaU1zLY" />
     <title>Homepage of Jeremy Rouot</title>
   </head>
 
