--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <font style="font-weight: bold;" size="+1">
       Lecturer and Researcher</font>  
-    <br> EPF-Ecoles d'Ingénieurs, Troyes. 
+    <br> EPF-Ecoles d'Ingénieur-e-s, Troyes. 
     <br>
     <br><a href="http://www.epf.fr" style="text-decoration: none;"><img src="img/logo_epf.png" HEIGHT=80></a>
     <br>
