--- a/index.html
+++ b/index.html
@@ -75,15 +75,6 @@
 
         <li>
           <i>
-            Working notes on the time minimal saturation of a pair of spins and application in Magnetic Resonance Imaging.
-          </i>
-          <br>
-          (with B. Bonnard, O. Cots, T. Verron)
-          <a href="file/mri2018.pdf" style="text-decoration: none;">[pdf]</a>
-        </li>
-
-        <li>
-          <i>
             Metric approximation of minimum time control systems.
           </i>
           <br>
@@ -109,7 +100,7 @@
             Control with Application to
             Swimming at Low Reynolds
             Number and Medical Resonance
-            Imaging. Springerbriefs  (2016). (118 pages)
+            Imaging. To appear Springerbriefs  (2018). (118 pages)
           </i>
           <br>
           (with B. Bonnard, M. Chyba)
@@ -119,6 +110,26 @@
 
       <br><b>Submitted papers</b>
       <ul>
+
+        <li>
+          <i>
+            Time minimal saturation of a pair of spins and application in magnetic resonance imaging, (2018). (41 pages)
+          </i>
+          <br>
+          (with B. Bonnard, O. Cots, T. Verron)
+          <a href="file/mri2018.pdf" style="text-decoration: none;">[pdf]</a>
+        </li>
+
+
+
+        <li>
+          <i>
+           A case study of optimal input-output system with sampled-data control: Ding and al. force and fatigue muscular control model (2018). (22 pages)
+          </i>
+          <br>
+          (with T. Bakir and B. Bonnard)
+          <a href="file/genou2018.pdf"style="text-decoration: none;">[pdf]</a>
+        </li>
 
         <li>
           <i>
@@ -187,7 +198,7 @@
       <ul>
         <li>
           <i>
-            J.Rouot and J.-B. Lasserre, 
+            J. Rouot and J.-B. Lasserre, 
             On inverse optimal control via polynomial optimization. 
           </i>
           <br>
