--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <li>
           <i>
-           A case study of optimal input-output system with sampled-data control: Ding and al. force and fatigue muscular control model (2018). (22 pages)
+           A case study of optimal input-output system with sampled-data control: Ding et al. force and fatigue muscular control model (2018). (22 pages)
           </i>
           <br>
           (with T. Bakir and B. Bonnard)
