--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
 
     <br>
-    <br><b>CV  </b> 
+    <br><b>CV <a href="file/cv.pdf" style="text-decoration: none;">[pdf]</a>    </b> 
     <br>
-    french <a href="file/cv.pdf" style="text-decoration: none;">[pdf]</a> 
+    
 
     <p><br>
     Associate member of the following research team and projects 
