--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             Control with Application to
             Swimming at Low Reynolds
             Number and Medical Resonance
-            Imaging. To appear Springerbriefs  (2018). (118 pages)
+            Imaging. To appear BCAM Springer Briefs 2018. 
+            (118 pages)
           </i>
           <br>
           (with B. Bonnard, M. Chyba)
