--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <li>
           <i>
-            Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging (2017). 
+            Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging. (2017) 
           </i>
           <br>
           (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
@@ -92,7 +92,7 @@
         </li>
       </ul>
 
-      <br><b>Submitted monograph</b>
+      <br><b>Monograph</b>
       <ul>
         <li>
           <i>
@@ -132,16 +132,6 @@
           <a href="file/genou2018.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
 
-        <li>
-          <i>
-            Sub-Riemannian geometry, Hamiltonian
-            dynamics, micro-swimmers, Copepod nauplii and
-            Copepod robot (2018). (40 pages)
-          </i>
-          <br>
-          (with B. Bonnard, M. Chyba, D. Takagi)
-          <a href="file/survey-nageurs17.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
 
 
 
@@ -152,9 +142,23 @@
 
         <li>
           <i>
-            P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
-            Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case, To Appear in ESAIM: COCV, 2018 (29p.).
+            B. Bonnard, M. Chyba, J. Rouot and D. Takagi,
+            Sub-Riemannian geometry, Hamiltonian
+            dynamics, micro-swimmers, Copepod nauplii and
+            Copepod robot.
           </i>
+          <br>
+          To Appear Pac. J. Math. Ind. 2018. (41 pages)
+          <a href="file/survey-nageurs17.pdf"style="text-decoration: none;">[pdf]</a>
+        </li>
+
+        <li>
+          <i>
+            P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
+            Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case. 
+          </i>
+          <br>
+            To Appear in ESAIM: COCV, 2018. (29 pages)
           <a href="file/copepod-cocv.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
 
@@ -163,7 +167,10 @@
           <i>
             P. Bettiol, B. Bonnard and J. Rouot,
             Optimal strokes at low Reynolds number: a geometric and
-            numerical study of Copepod and Purcell swimmers, To Appear in SIAM J. Control Optim., 2018 (24p.). 
+            numerical study of Copepod and Purcell swimmers.
+          </i>
+          <br>
+            To Appear in SIAM J. Control Optim. 2018. (24 pages)
           </i>
           <a href="file/siam16.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
@@ -175,7 +182,7 @@
             The Three-link Purcell swimmer: some geometric problems related to periodic optimal controls. 
           </i>
           <br>
-          Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016 (27p.).
+          Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016 (27 pages).
           <a href="file/ricam15.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
       </ul>
@@ -199,11 +206,11 @@
       <ul>
         <li>
           <i>
-            J. Rouot and J.-B. Lasserre, 
+            J.-B. Lasserre and J. Rouot, 
             On inverse optimal control via polynomial optimization. 
           </i>
           <br>
-          2017 IEEE 56th Annual Conference on Decision and Control (CDC), 
+          56th IEEE Conference on Decision and Control (CDC), 
           2017, 721-726.
           <a href="file/cdc2017.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
