--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
             numerical study of Copepod and Purcell swimmers.
           </i>
           <br>
-            To Appear in SIAM J. Control Optim. 2018. (24 pages)
+            To Appear in SIAM J. Control Optim. 2018, 
+            DOI : 10.1137/16M1106778. (24 pages)
           </i>
           <a href="file/siam16.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
