--- a/index.html
+++ b/index.html
@@ -31,25 +31,32 @@
 
     <font style="font-weight: bold;" size="+1">
       Lecturer and Researcher</font>  
-    <br> EPF-Ecoles d'Ingénieur-e-s, Troyes. 
+    <br> EPF-Ecoles d'Ing&eacutenieur-e-s, Troyes. 
     <br>
     <br><a href="http://www.epf.fr" style="text-decoration: none;"><img src="img/logo_epf.png" HEIGHT=80></a>
     <br>
     <br>
 
     <p align="justify"><b>Address</b>
-    <br>e-mail: <a href="mailto:jeremy.rouot@epf.fr" style="text-decoration: none;">jeremy.rouot@epf.fr</a>
+    <br>e-mail: <a href="mailto:jeremy.rouot@epf.fr" style="text-decoration: none;">jeremy.rouot@grenoble-inp.org</a>
     <br> EPF CAMPUS DE TROYES
     <br> 2, rue F. Sastre
-    <br> 10430 Rosières-près-Troyes
+    <br> 10430 Rosi&egraveres-pr&egraves-Troyes
 
 
     <br>
-    <br><b>CV <a href="file/cv.pdf" style="text-decoration: none;">[pdf]</a>    </b> 
+    <p align="justify"><b>CV</b> <a href="file/cv.pdf" style="text-decoration: none;"><br>[pdf]</a> 
     <br>
     
 
-    <p><br>
+
+    <p align="justify"><b>Research Interests</b>
+    <br>
+    Geometric control theory, Optimization and optimal control, Numerical methods, Fracture mechanics. 
+    <br><i>Applications:</i>
+    Swimming at low Reynolds number, Nuclear magnetic resonance, 
+    Orbital transfer with low thrust, Inverse optimal control in Robotics.<br>
+    <p>
     Associate member of the following research team and projects 
     <ul style="list-style-type:circle">
       <li>
@@ -60,16 +67,12 @@
         global optimal control for Magnetic Resonance Imaging
       </li>
     </ul>
-    <p><br>
+    <p>
 
-    <p align="justify"><b>Research</b>
-    <br><i>Interests:</i> 
-    Geometric control theory, Optimization and optimal control, Numerical methods, Fracture mechanics. 
-    <br><i>Applications:</i>
-    Swimming at low Reynolds number, Nuclear magnetic resonance, 
-    Orbital transfer with low thrust, Inverse optimal control in Robotics.
 
-      <br>
+    <br><a href="https://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&CB_DOI=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
+
+<!--      <br>
       <br><b>Work in progres</b>
       <ul>
 
@@ -249,6 +252,9 @@
         </li>
       </ul>
 
+      -->
+
+      <br>
       <br><b>Miscellaneous</b>
       <ul>
 
