--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <p>
 
 
-    <br><a href="https://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
+    <br>&nbsp;&nbsp;<a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
 
 <!--      <br>
       <br><b>Work in progres</b>
