--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
 
     <br>&nbsp;&nbsp;<a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
 
+    <br>
+    <br> New book !
+    <br><a href="https://www.springer.com/us/book/9783319947907" style="text-decoration: none;"><img src="img/book2018.jpg" HEIGHT=280></a>
+
 <!--      <br>
       <br><b>Work in progres</b>
       <ul>
