--- a/Amity/index.html
+++ b/Amity/index.html
@@ -17,7 +17,6 @@
     <title>Schedule of the Amity Study Abroad Program at EPF</title>
   </head>
 
-
   <body style="color: rgb(0, 0, 0); background-color:#D5DBDC;" link="#8585ad" vlink="#4d0099">
 
     <br>
@@ -25,7 +24,25 @@
    Schedule of the Amity Study Abroad Program 2018 at EPF</font> 
     <br>
 
-    <iframe src="https://calendar.google.com/calendar/embed?title=Courses%20and%20Activities&amp;mode=WEEK&amp;height=700&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=g1mf0e7cemdao1n0o65nsvs85c%40group.calendar.google.com&amp;color=%23125A12&amp;src=b4la5eahhms7t7sjrk1onechtc%40group.calendar.google.com&amp;color=%23182C57&amp;src=u5isbev7l31g2rhda2nkoicl6g%40group.calendar.google.com&amp;color=%23853104&amp;ctz=Europe%2FParis" style="border-width:0" width="1080" height="700" frameborder="0" scrolling="no"></iframe>
+    <br>
+    <i>Legend of the calendar:</i>
+    <br>
+
+    <font color="#16169c"><strong>Amity and EPF courses</strong></font>
+    <br>
+    <font color="#408000"><strong>Activities organized by EPF</strong></font>
+    <br>
+    <font color="#cc3300"><strong>Proposed Activities not organized by EPF</strong></font>
+    <br>
+
+    <br>
+
+    <i>For further information about an event, click on it or ask
+      to jeremy.rouot@epf.fr</i>
+    <br>
+
+
+    <iframe src="https://calendar.google.com/calendar/embed?title=Courses%20and%20Activities&amp;mode=WEEK&amp;height=700&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=g1mf0e7cemdao1n0o65nsvs85c%40group.calendar.google.com&amp;color=%23125A12&amp;src=b4la5eahhms7t7sjrk1onechtc%40group.calendar.google.com&amp;color=%23182C57&amp;src=u5isbev7l31g2rhda2nkoicl6g%40group.calendar.google.com&amp;color=%23853104&amp;ctz=Europe%2FParis" style="border-width:0" width="820" height="500" frameborder="0" scrolling="no"></iframe>
 
 
   </body>
