--- a/Amity/index.html
+++ b/Amity/index.html
@@ -32,7 +32,7 @@
     <br>
     <font color="#408000"><strong>Activities organized by EPF</strong></font>
     <br>
-    <font color="#cc3300"><strong>Proposed Activities not organized by EPF</strong></font>
+    <font color="#cc3300"><strong>External Proposed Activities not organized by EPF</strong> <i>Some events need you to be registered, send an email at jeremy.rouot@epf.fr if you would like to attend such event.</i></font>
     <br>
 
     <br>
