--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <meta name="description" content="Homepage of Jeremy Rouot" />
     <meta name="Keywords" content="Jeremy Rouot homepage">
     <meta http-equiv="Pragma" content="no-cache">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="gNSE4DKNkeQ1woWLtRcwORzo9NgAEjgFPnYRQaU1zLY" />
     <title>Homepage of Jeremy Rouot</title>
   </head>
 
 
-  <body style="color: rgb(0, 0, 0); background-color:#D5DBDC;" link="#8585ad" vlink="#4d0099">
-
+  <body style="color: rgb(0, 0, 0); background-color:#D5DBDC;" font="26px Arial" link="#8585ad" vlink="#4d0099" >
+    
+    <font size="+1">
     <br>
     <font size="+3">
       J&eacuter&eacutemy Rouot</font> 
