--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
 
     <p align="justify"><b>Research Interests</b>
     <br>
-    Geometric control theory, Optimization and optimal control, Numerical methods, Fracture mechanics. 
+    Geometric control theory, Optimization and optimal control, Numerical methods, Data Science. 
     <br><i>Applications:</i>
     Swimming at low Reynolds number, Nuclear magnetic resonance, 
-    Orbital transfer with low thrust, Inverse optimal control in Robotics.<br>
+    Orbital transfer with low thrust, Inverse optimal control in Robotics,
+    Data Science in environment.<br>
     <p>
     Associate member of the following research team and projects 
     <ul style="list-style-type:circle">
