--- a/index.html
+++ b/index.html
@@ -33,25 +33,23 @@
 
     <font style="font-weight: bold;" size="+1">
       Lecturer and Researcher</font>  
-    <br> EPF-Ecoles d'Ing&eacutenieur-e-s, Troyes. 
+    <br> ISEN Brest 
     <br>
-    <br><a href="http://www.epf.fr" style="text-decoration: none;"><img src="img/logo_epf.png" HEIGHT=80></a>
+    <br><a href="http://www.isen.fr" style="text-decoration: none;"><img src="img/isen_logo.png" HEIGHT=80></a>
     <br>
     <br>
 
     <p align="justify"><b>Address</b>
-    <br>e-mail: <a href="mailto:jeremy.rouot@epf.fr" style="text-decoration: none;">jeremy.rouot@grenoble-inp.org</a>
-    <br> EPF CAMPUS DE TROYES
-    <br> 2, rue F. Sastre
-    <br> 10430 Rosi&egraveres-pr&egraves-Troyes
+    <br>e-mail: <a href="mailto:jeremy.rouot@grenoble-inp.org" style="text-decoration: none;">jeremy.rouot@grenoble-inp.org</a>
+    <br> ISEN CAMPUS DE BREST
+    <br> 20 Rue Cuirassé Bretagne, 
+    <br> 29200 Brest
 
 
     <br>
     <p align="justify"><b>CV</b> <a href="file/cv.pdf" style="text-decoration: none;"><br>[pdf]</a> 
     <br>
     
-
-
     <p align="justify"><b>Research Interests</b>
     <br>
     Geometric control theory, Optimization and optimal control, Numerical methods, Data Science. 
@@ -65,205 +63,26 @@
       <li>
         INRIA <a href="http://team.inria.fr/mctao/" style="text-decoration: none;">McTAO</a> Team
       </li>
-      <li>
-        Projet <a href="https://www.fondation-hadamard.fr/PGMO" style="text-decoration: none;">PGMO FMJH</a>: Algebro-geometric techniques with applications to
-        global optimal control for Magnetic Resonance Imaging
-      </li>
     </ul>
     <p>
 
 
     <br>&nbsp;&nbsp;<a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
 
-    <br>
-    <br> New book !
-    <br><a href="https://www.springer.com/us/book/9783319947907" style="text-decoration: none;"><img src="img/book2018.jpg" HEIGHT=280></a>
-
-<!--      <br>
-      <br><b>Work in progres</b>
-      <ul>
-
-        <li>
-          <i>
-            Metric approximation of minimum time control systems.
-          </i>
-          <br>
-          (with J.-B. Caillau, J.-B. Pomet)
-          <a href="file/finsler2018.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-
-        <li>
-          <i>
-            Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging. (2017) 
-          </i>
-          <br>
-          (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
-          <a href="file/mri2017.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-      </ul>
-
-      <br><b>Monograph</b>
-      <ul>
-        <li>
-          <i>
-            Geometric and Numerical Optimal
-            Control with Application to
-            Swimming at Low Reynolds
-            Number and Medical Resonance
-            Imaging. To appear BCAM Springer Briefs 2018. 
-            (118 pages)
-          </i>
-          <br>
-          (with B. Bonnard, M. Chyba)
-          <a href="file/monograph16.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-      </ul>
-
-      <br><b>Submitted papers</b>
-      <ul>
-
-        <li>
-          <i>
-            Time minimal saturation of a pair of spins and application in magnetic resonance imaging, (2018). (41 pages)
-          </i>
-          <br>
-          (with B. Bonnard, O. Cots, T. Verron)
-          <a href="file/mri2018.pdf" style="text-decoration: none;">[pdf]</a>
-        </li>
-
-
-
-        <li>
-          <i>
-           A case study of optimal input-output system with sampled-data control: Ding et al. force and fatigue muscular control model (2018). (22 pages)
-          </i>
-          <br>
-          (with T. Bakir and B. Bonnard)
-          <a href="file/genou2018.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-
-
-
-
-      </ul>
-
-      <br><b>Papers in journals with peer review</b>
-      <ul>
-
-        <li>
-          <i>
-            B. Bonnard, M. Chyba, J. Rouot and D. Takagi,
-            Sub-Riemannian geometry, Hamiltonian
-            dynamics, micro-swimmers, Copepod nauplii and
-            Copepod robot.
-          </i>
-          <br>
-          To Appear Pac. J. Math. Ind. 2018. (41 pages)
-          <a href="file/survey-nageurs17.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-
-        <li>
-          <i>
-            P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
-            Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case. 
-          </i>
-          <br>
-            To Appear in ESAIM: COCV, 2018. (29 pages)
-          <a href="file/copepod-cocv.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-
-
-        <li>
-          <i>
-            P. Bettiol, B. Bonnard and J. Rouot,
-            Optimal strokes at low Reynolds number: a geometric and
-            numerical study of Copepod and Purcell swimmers.
-          </i>
-          <br>
-            To Appear in SIAM J. Control Optim. 2018, 
-            DOI : 10.1137/16M1106778. (24 pages)
-          </i>
-          <a href="file/siam16.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-
-
-        <li>
-          <i>
-            P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon and J. Rouot,
-            The Three-link Purcell swimmer: some geometric problems related to periodic optimal controls. 
-          </i>
-          <br>
-          Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016 (27 pages).
-          <a href="file/ricam15.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-      </ul>
-
-      <br><b>Papers in books with peer review</b>
-      <ul>
-        <li> 
-          <i>
-            B. Bonnard, H. Henninger and J. Rouot,
-            Lunar perturbation of the metric 
-            associated to the averaged orbital transfer. 
-          </i>
-          <br>
-          Analysis and geometry in control theory and its applications, 
-          published in Springer InDam series, vol. 11, 2015. 
-          <a href="file/zermelo14.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-      </ul>
-
-      <br><b>Proceedings with peer review</b>
-      <ul>
-        <li>
-          <i>
-            J.-B. Lasserre and J. Rouot, 
-            On inverse optimal control via polynomial optimization. 
-          </i>
-          <br>
-          56th IEEE Conference on Decision and Control (CDC), 
-          2017, 721-726.
-          <a href="file/cdc2017.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-
-        <li>
-          <i>
-            P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
-            Optimal control theory and the efficiency of the swimming mechanism of the Copepod Zooplankton. 
-          </i>
-          <br>
-          In Proceedings of the 20th IFAC World Congress, Toulouse, 2017.
-          <a href="file/ifac16.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-
-        <li>
-          <i>
-            B. Bonnard, M. Chyba, J. Rouot and D. Takagi,
-            A Numerical Approach to the Optimal Control
-            and Efficiency of the Copepod Swimmer. 
-          </i>
-          <br>
-          55th IEEE Conference on
-          Decision and Control, 2016.
-          <a href="file/cdc-copepod16.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-        <li>
-          <i>
-            B. Bonnard, A. Jacquemard and J. Rouot,
-            Optimal Control of an Ensemble of Bloch Equations
-            with Applications in MRI. 
-          </i>
-          <br>
-          55th IEEE Conference on Decision and Control, 2016.
-          <a href="file/cdc-mri16.pdf"style="text-decoration: none;">[pdf]</a>
-        </li>
-      </ul>
-
-      -->
-
       <br>
       <br><b>Miscellaneous</b>
       <ul>
+
+        <li>
+          <i>
+	Optimization of chemical batch reactors using temperature control
+          </i>
+          <br>
+          Slides on the control of chemical reactions. 
+          <a href="file/planches-reactions.pdf"style="text-decoration: none;">[pdf]</a>
+          </br>
+        </li>
+
 
         <li>
           <i>
