--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <li>
           <i>
-	Optimization of chemical batch reactors using temperature control
+	Optimization of chemical batch reactors using temperature control.
           </i>
           <br>
           Slides on the control of chemical reactions. 
@@ -83,12 +83,23 @@
           </br>
         </li>
 
+        <li>
+          <i>
+            Geometric and numerical methods in optimal
+            control for the time minimal saturation in
+            Magnetic Resonance Imaging.
+          </i>
+          <br>
+          Slides on the control of two spins in MRI. 
+          <a href="file/planches-mri.pdf"style="text-decoration: none;">[pdf]</a>
+          </br>
+        </li>
 
         <li>
           <i>
             Sub-Riemannian geometry, 
             Hamiltonian dynamics,
-            micro-swimmers, Copepod nauplii and Copepod robot 
+            micro-swimmers, Copepod nauplii and Copepod robot.
           </i>
           <br>
           Slides on the Copepod swimmer. 
@@ -98,8 +109,14 @@
 
         <li>
           <i>
-            Geometric and numerical methods in optimal control and applications to the swimming problem at low Reynolds number and to low thrust orbital transfer.
+            Averaging for minimum time control problems and applications.
           </i>  
+          <br>
+          Slides on the low thrust control in spatial mechanics. 
+          <a href="file/planches-j2-finsler.pdf"style="text-decoration: none;">[pdf]</a>
+          </br>
+        </li>
+
           <br>
           PhD Thesis, 2016,
           <i>Advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf"style="text-decoration: none;">[pdf]</a> <a href="https://tel.archives-ouvertes.fr/tel-01472370v2"style="text-decoration: none;">[link]</a> 
