--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <br>
 -->
     <p align="justify"><b>Address</b>
-    <br>e-mail: <a href="mailto:jeremy.rouot@grenoble-inp.org" style="text-decoration: none;">jeremy.rouot@grenoble-inp.org</a>
+    <br>e-mail: <i>jeremy rouot</i> at <i>grenoble-inp org</i> (replace each of the two blank spaces in italic style with one dot)</a>
    <!-- <br> ISEN CAMPUS DE BREST
     <br> 20 Rue Cuirassé Bretagne, 
     <br> 29200 Brest
@@ -67,7 +67,7 @@
     <p>
 
 
-    <br>&nbsp;&nbsp;<a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
+    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
 
       <br>
       <br><b>Miscellaneous</b>
@@ -78,7 +78,7 @@
 	Optimization of chemical batch reactors using temperature control.
           </i>
           <br>
-          Slides on the control of chemical reactions. 
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slides on the control of chemical reactions. 
           <a href="file/planches-reactions.pdf"style="text-decoration: none;">[pdf]</a>
           </br>
         </li>
@@ -90,7 +90,7 @@
             Magnetic Resonance Imaging.
           </i>
           <br>
-          Slides on the control of two spins in MRI. 
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slides on the control of two spins in MRI. 
           <a href="file/planches-mri.pdf"style="text-decoration: none;">[pdf]</a>
           </br>
         </li>
@@ -102,7 +102,7 @@
             micro-swimmers, Copepod nauplii and Copepod robot.
           </i>
           <br>
-          Slides on the Copepod swimmer. 
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slides on the Copepod swimmer. 
           <a href="file/planches-copepod.pdf"style="text-decoration: none;">[pdf]</a>
           </br>
         </li>
@@ -112,12 +112,12 @@
             Averaging for minimum time control problems and applications.
           </i>  
           <br>
-          Slides on the low thrust control in spatial mechanics. 
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slides on the low thrust control in spatial mechanics. 
           <a href="file/planches-j2-finsler.pdf"style="text-decoration: none;">[pdf]</a>
           </br>
         </li>
 
-          <br>
+        <li>
           PhD Thesis, 2016,
           <i>Advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf"style="text-decoration: none;">[pdf]</a> <a href="https://tel.archives-ouvertes.fr/tel-01472370v2"style="text-decoration: none;">[link]</a> 
         </li>
@@ -128,7 +128,7 @@
             Optimal Transportation : Applications to Image processing.
           </i>
           <br>
-          Memoir, 2012,
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memoir, 2012,
           <i>Advisors:</i> Emmanuel Maitre and &Eacutedouard Oudet. <a href="file/rapport2A.pdf"style="text-decoration: none;">[pdf]</a> 
         </li>
       </ul>
