--- a/index.html
+++ b/index.html
@@ -39,17 +39,25 @@
     <br>
     <br>
 -->
+
+<br>
     <p align="justify"><b>Address</b>
-    <br>e-mail: <i>jeremy rouot</i> at <i>grenoble-inp org</i> (replace each of the two blank spaces in italic style with one dot)</a>
+    <br>e-mail: <i>jeremy rouot</i> at <i>tutanota com</i> (replace each of the two blank spaces in italic style with one dot)</a>
    <!-- <br> ISEN CAMPUS DE BREST
     <br> 20 Rue Cuirassé Bretagne, 
     <br> 29200 Brest
 -->
 
+<br>
+<br>
+<br>
+<br>
+<!--
     <br>
     <p align="justify"><b>CV</b> <a href="file/cv.pdf" style="text-decoration: none;"><br>[pdf]</a> 
     <br>
-    
+-->
+
     <p align="justify"><b>Research Interests</b>
     <br>
     Geometric control theory, Optimization and optimal control, Numerical methods, Data Science. 
@@ -136,7 +144,7 @@
       <p align="justify"><b>Education</b>
       <br>PhD in Applied Mathematics (<a href="http://unice.fr/" style="text-decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016)
       <br>Ing&eacutenieur in Applied Mathematics / Computer Science
-      (<a href="http://ensimag.grenoble-inp.fr/welcome/" style="text-decoration: none;">Grenoble INP - ENSIMAG</a>, 2013)
+      (<a href="http://ensimag.grenoble-inp.fr/" style="text-decoration: none;">Grenoble INP - ENSIMAG</a>, 2013)
     <br>
 
   </body>
